--- a/Firstone.html
+++ b/Firstone.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
       <html>
-        WELCOME TO DIGITAL WORLD
+        
+        <body>
+          <h1 align = "center">WELCOME TO DIGITAL WORLD</h1>
+        </body>
       </html>
